# neuropathy-dna-scanner

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: catalog-refresh.yml  ci.yml  docker.yml  release.yml
core/: Cargo.toml
core/src/: boundary.rs  catalog.rs  depth.rs  error.rs  interpret.rs  lib.rs  matrix.rs  mock.rs  pileup.rs  pileup_cram.rs  reader.rs  reference.rs  reference_data.rs  report.rs
core/src/sources/: cursor_cram_source.rs  cursor_source.rs  file.rs  memory.rs  mod.rs  offset_cursor.rs  range_query.rs
core/tests/: cram_fixture_test.rs  cram_pileup_test.rs  cross_impl_test.rs  error_path_test.rs  file_source_integration_test.rs  fixture_helpers.rs  fixture_smoke_test.rs  pileup_regression_test.rs
core/tests/data/: cn1_30x.bam.bai  cn2_26x.bam.bai  cn2_30x.bam.bai  cn3_30x.bam.bai  cn3_floor_10x.bam  cn3_floor_10x.bam.bai  cn3_low_20x.bam.bai  empty_region.bam  md5_mismatch.bam  truncated.bam  wrong_build.bam
core/tests/data/missing_index/: test.bam
core/tests/snapshots/: report_cn2.txt  report_cn3_cmt1a.txt  report_refused.txt
deploy/: Caddyfile
scripts/: download-reference.sh
tools/: Cargo.toml
tools/src/: lib.rs  synth.rs
tools/tests/: synth_bam_test.rs
wasm/: Cargo.toml  build.rs
wasm/src/: lib.rs  pileup_wasm.rs
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/public/: logo-preview.html  pkg
web/src/: App.vue
web/src/components/: AnalysisProgress.vue  AppFooter.vue  ChromosomeDiagram.vue  DataSources.vue  DisclaimerStep.vue  FileWizard.vue  LegalPage.vue  SnvFindingCard.vue  SyndromeSelector.vue  UnifiedResults.vue  WelcomeStep.vue
web/src/composables/: useAnalysis.ts  useWasm.ts
web/src/types/: wasm.ts
