[package]
name = "nds-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "WebAssembly bindings for neuropathy-dna-scanner. Browser deployment target."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nds-core = { path = "../core" }
noodles-bam.workspace = true
noodles-cram.workspace = true
noodles-sam.workspace = true
noodles-core.workspace = true
noodles-bgzf.workspace = true
noodles-fasta.workspace = true
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"

[build-dependencies]
flate2 = "1"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
